2017-08-23  Ryosuke Niwa  <rniwa@webkit.org>

        Merge the latest version of Speedometer 2.0 to browserbench.org against at r221126.

        Rubber-stamped by Yusuke Suzuki.

        * Speedometer2.0: Replaced with PerformanceTests/Speedometer.
        * Speedometer2.0/resources/todomvc/architecture-examples/preact/dist/app.js:
        * Speedometer2.0/resources/todomvc/architecture-examples/preact/dist/todomvc.css:
        * Speedometer2.0/resources/todomvc/architecture-examples/preact/src/app/footer.js:
        * Speedometer2.0/resources/todomvc/architecture-examples/preact/src/app/index.js:
        * Speedometer2.0/resources/todomvc/architecture-examples/preact/src/app/item.js:
        * Speedometer2.0/resources/todomvc/architecture-examples/preact/src/app/util.js:
        (export.uuid):

2017-08-23  Ryosuke Niwa  <rniwa@webkit.org>

        Merge the latest version of Speedometer 2.0 to browserbench.org against at r221119.

        Rubber-stamped by Joseph Pecoraro.

        * Speedometer2.0: Replaced with PerformanceTests/Speedometer.

2017-08-22  Ryosuke Niwa  <rniwa@webkit.org>

        Merge the latest version of Speedometer 2.0 to browserbench.org against at r221056.

        Rubber-stamped by Joseph Pecoraro.

        * Speedometer2.0: Replaced with PerformanceTests/Speedometer.
        * Speedometer2.0/resources/main.js:
        (window.benchmarkClient.didFinishLastIteration):
        * Speedometer2.0/resources/todomvc/vanilla-examples/es2015-babel-webpack/dist/bundle.app.9debb1b0a94f14d0ebe9.js: Removed.
        * Speedometer2.0/resources/todomvc/vanilla-examples/es2015-babel-webpack/dist/bundle.app.9debb1b0a94f14d0ebe9.js.map: Removed.
        * Speedometer2.0/resources/todomvc/vanilla-examples/es2015-babel-webpack/dist/bundle.manifest.a55034b424c795b1a9a8.js: Removed.
        * Speedometer2.0/resources/todomvc/vanilla-examples/es2015-babel-webpack/dist/bundle.manifest.a55034b424c795b1a9a8.js.map: Removed.